--- a/public/MODELS/contact/tmpl_prographic/tmpl/contact.html
+++ b/public/MODELS/contact/tmpl_prographic/tmpl/contact.html
@@ -1,4 +1,4 @@
-<div class='container_12 clearfix' >
+
  <div class='SING grid_5 alpha contact' id='contact_{$o->idC}_{$o->LG}'>
    <div class='EDeditor ContactDdetails' >
 
@@ -69,4 +69,6 @@
 
  </form>
 
-</div></div>
+</div>
+
+
