Contact improvements / standards

--- a/public/MODELS/contact/tmpl_tribalFest/tmpl/contact_en.html
+++ b/public/MODELS/contact/tmpl_tribalFest/tmpl/contact_en.html
@@ -1,5 +1,8 @@
 <div class='cont-mainPage'>
 
+    {$o->feedback_GOOD}
+    <div id='feedback' class='clearfix'>{$o->feedback}</div>
+
     <div class='SING contact' id='contact_{$o->idC}_{$o->lang}'>
         <div class='EDeditor ContactDdetails' >
 
@@ -8,7 +11,6 @@
     </div>
 
     <form action='' method='post' id='form_comp' >
-        {$o->feedback_GOOD}
         <input type='hidden' name='action' value='contact' />
 
         <!--[if IE]> <![endif]-->
@@ -19,7 +21,7 @@
         <!--[if IE]> <span>Phone</span><![endif]--> <input type='text' name='phone'     id='phone'   value='{$o->phone}'     placeholder='Phone' />
         <br/>
         <!--[if IE]><span>Subject</span><![endif]-->   <input type='text' name='subject'   id='subject'  value='{$o->subject}'  placeholder='Subject'/>
-        <!--[if IE]><span>Message</span><![endif]-->   <textarea name='message'            id='message'  placeholder='Message'></textarea>
+        <!--[if IE]><span>Message</span><![endif]-->   <textarea name='message'            id='message'  placeholder='Message'>{$o->message}</textarea>
         <br/>
         <span></span>
         <img id='captcha' src='assets/securimage/securimage_show.php' alt='CAPTCHA Image' /><br />
@@ -34,7 +36,6 @@
         <input type='reset' name='Reset' value='Reset' class='ivy' />
     </form>
 
-    <div id='feedback' class='clearfix'>{$o->feedback}</div>
 
-
+<div class='clearfix'></div>
 </div>
