--- a/public/MODELS/contact/tmpl/contact.html
+++ b/public/MODELS/contact/tmpl/contact.html
@@ -23,7 +23,7 @@
      <input type='submit' name='Submit' value='{$o->sp_submit}' /> &nbsp;&nbsp;&nbsp;
      <input type='reset' name='Reset' value='{$o->sp_reset}' />
  </form>
-<div class='SING contact' id='contact_{$o->idC}_{$o->LG}'>
+<div class='SING contact' id='contact_{$o->idNode}_{$o->LG}'>
    <div class='EDeditor ContactDdetails' >
 
        ".$this->ctrlDisplay_fromObjRes($o)."
