--- a/public/MODELS/gallery/tmpl_pro/ADMIN/tmpl/manageCaptions.html
+++ b/public/MODELS/gallery/tmpl_pro/ADMIN/tmpl/manageCaptions.html
@@ -38,6 +38,6 @@
 </div>
 
     <input type='submit' name='saveCaptions' value='save'>
-    <input type='hidden' name='moduleName' value='gallery'>
+    <input type='hidden' name='modName' value='gallery'>
     <input type='hidden' name='methName'  value='saveCaptions'>
 </form>
