--- a/public/MODELS/single/tmpl/single.html
+++ b/public/MODELS/single/tmpl/single.html
@@ -1,4 +1,4 @@
-<div class='SING single' id='single_{$o->idC}_{$o->LG}'>
+<div class='SING single' id='single_{$o->idNode}_{$o->LG}'>
     <div class='EDeditor single'>
         ".$this->ctrlDisplay_fromObjRes($o)."
     </div>
