--- a/public/MODELS/contact/tmpl_comoti/tmpl/contact.html
+++ b/public/MODELS/contact/tmpl_comoti/tmpl/contact.html
@@ -1,5 +1,5 @@
 
-<div class='SING contact' id='contact_{$o->idC}_{$o->LG}'>
+<div class='SING contact' id='contact_{$o->idNode}_{$o->LG}'>
    <div class='EDeditor ContactDdetails' >
 
        ".$this->ctrlDisplay_fromObjRes($o)."
