--- a/public/MODELS/contact/tmpl_prographic/tmpl/contact.html
+++ b/public/MODELS/contact/tmpl_prographic/tmpl/contact.html
@@ -1,5 +1,5 @@
 
- <div class='SING grid_5 alpha contact' id='contact_{$o->idC}_{$o->LG}'>
+ <div class='SING grid_5 alpha contact' id='contact_{$o->idNode}_{$o->LG}'>
    <div class='EDeditor ContactDdetails' >
 
        ".$this->ctrlDisplay_fromObjRes($o)."
