--- a/public/MODELS/contact/tmpl_tribalFest/tmpl/contact_en.html
+++ b/public/MODELS/contact/tmpl_tribalFest/tmpl/contact_en.html
@@ -4,7 +4,7 @@
     {$o->feedback_GOOD}
     <div id='feedback' class='clearfix'>{$o->feedback}</div>
 
-    <div class='SING contact' id='contact_{$o->idC}_{$o->lang}'>
+    <div class='SING contact' id='contact_{$o->idNode}_{$o->lang}'>
         <div class='EDeditor ContactDdetails' >
 
             ".$this->ctrlDisplay_fromObjRes($o)."
