--- a/public/PLUGINS/rating/tmpl/o.ratingRecord_bigStar.html
+++ b/public/PLUGINS/rating/tmpl/o.ratingRecord_bigStar.html
@@ -3,15 +3,15 @@
 
         <span id='Rating'>
              <span class='muted' style=' font-size: 85%; text-align: right;'>
-                 ".(isset($obj->nrRates) && $obj->nrRates!=0
-                      ?   " from  <span id='nrRates' >{$obj->nrRates}</span> users"
+                 ".(isset($mod->nrRates) && $mod->nrRates!=0
+                      ?   " from  <span id='nrRates' >{$mod->nrRates}</span> users"
                       :   " not yet voted  "
                      )
                  ."
              </span>
 
             <span id='totalRating' style='display: none;'>
-                {$obj->totalRating}
+                {$mod->totalRating}
             </span>
 
 
@@ -19,25 +19,25 @@
 
         <br>
 
-        ".( is_array($obj->ustars)
+        ".( is_array($mod->ustars)
             ? "
 
-                <span id='uRating_{$obj->uid}' title='{$obj->DB_table_postfix}_{$obj->DB_extKey_name}_{$obj->DB_extKey_value}'>
+                <span id='uRating_{$mod->uid}' title='{$mod->DB_table_postfix}_{$mod->DB_extKey_name}_{$mod->DB_extKey_value}'>
                      <span class='muted' style='font-size: 85%;'>Your vote</span>
-                     <i title='star1' class='icon-blue icon-star{$obj->ustars[0]}'></i>
-                     <i title='star2' class='icon-blue icon-star{$obj->ustars[1]}'></i>
-                     <i title='star3' class='icon-blue icon-star{$obj->ustars[2]}'></i>
-                     <i title='star4' class='icon-blue icon-star{$obj->ustars[3]}'></i>
-                     <i title='star5' class='icon-blue icon-star{$obj->ustars[4]}'></i>
+                     <i title='star1' class='icon-blue icon-star{$mod->ustars[0]}'></i>
+                     <i title='star2' class='icon-blue icon-star{$mod->ustars[1]}'></i>
+                     <i title='star3' class='icon-blue icon-star{$mod->ustars[2]}'></i>
+                     <i title='star4' class='icon-blue icon-star{$mod->ustars[3]}'></i>
+                     <i title='star5' class='icon-blue icon-star{$mod->ustars[4]}'></i>
 
                 </span>
              "
-            : "$obj->totalRating no ustars"
+            : "$mod->totalRating no ustars"
         )."
     </div>
-    ".(isset($obj->nrRates) && $obj->nrRates!=0
+    ".(isset($mod->nrRates) && $mod->nrRates!=0
          ?   " <div class='iconBig iconBig-star pull-right' style='margin-top: -15px;'>
-                 <p>{$obj->Rating}</p>
+                 <p>{$mod->Rating}</p>
                </div>
                "
          :   " <div class='iconBig iconBig-star-none pull-right' style='margin-top: -15px;'></div>"
