--- a/public/MODELS/commGallery/tmpl/o.comm_prev.html
+++ b/public/MODELS/commGallery/tmpl/o.comm_prev.html
@@ -43,7 +43,7 @@
                      <small class='userName r5'>{$ao->userName} </small>
                      <small class='entryDate'>  {$ao->entryDate} </small>
 
-                     ". $this->renderDisplay_fromObj(
+                     ". $this->Render_object(
                                 $this->thumbs->{'SET_thComm'.$ao->idComm},'',
                                "PLUGINS/thumbs/tmpl/thumbs.html")."
              </div>
