--- a/public/MODELS/comments/deprec_tmpl/comm_prev.html
+++ b/public/MODELS/comments/deprec_tmpl/comm_prev.html
@@ -42,7 +42,7 @@
          <span class='entryDate'>  {$entryDate} </span>
          ".$this->get_renderDISPLAY('thumbs','SET_thComm'.$idComm)."
 
-         ".$this->renderDisplay_fromObj (
+         ".$this->Render_object (
                    $this->rating->{'SET_Comm'.$uidComm},'',
                   'PLUGINS/rating/tmpl/o.ratingUser.html')."
 
