--- a/public/MODELS/contact/tmpl/contact.html
+++ b/public/MODELS/contact/tmpl/contact.html
@@ -26,7 +26,7 @@
 <div class='SING contact' id='contact_{$o->idNode}_{$o->LG}'>
    <div class='EDeditor ContactDdetails' >
 
-       ".$this->ctrlDisplay_fromObjRes($o)."
+       ".$this->Render_ModulefromRes($o)."
    </div>
 </div>
 <div id='feedback'>{$o->feedback}</div>
