--- a/public/MODELS/contact/tmpl_prographic/tmpl/contact.html
+++ b/public/MODELS/contact/tmpl_prographic/tmpl/contact.html
@@ -2,7 +2,7 @@
  <div class='SING grid_5 alpha contact' id='contact_{$o->idNode}_{$o->LG}'>
    <div class='EDeditor ContactDdetails' >
 
-       ".$this->ctrlDisplay_fromObjRes($o)."
+       ".$this->Render_ModulefromRes($o)."
    </div>
 </div>
 
