--- a/public/MODELS/gallery/tmpl_tribalFest/ADMIN/tmpl/manageCaptions.html
+++ b/public/MODELS/gallery/tmpl_tribalFest/ADMIN/tmpl/manageCaptions.html
@@ -10,8 +10,7 @@
        <tr>
             <td>
 
-      ".$this->renderDisplay_Items_uniDimens(
-            $o->urlImages,
+      ".$this->Render_array( $o->urlImages,'','',
             "
               <div class='img-container'>
                   <img src='~i' class='small-img'>
