--- a/public/MODELS/contact/tmpl_tribalFest/tmpl/contact_en.html
+++ b/public/MODELS/contact/tmpl_tribalFest/tmpl/contact_en.html
@@ -7,7 +7,7 @@
     <div class='SING contact' id='contact_{$o->idNode}_{$o->lang}'>
         <div class='EDeditor ContactDdetails' >
 
-            ".$this->ctrlDisplay_fromObjRes($o)."
+            ".$this->Render_ModulefromRes($o)."
         </div>
     </div>
 
