--- a/public/MODELS/gallery/tmpl_pro/tmpl/gallery.html
+++ b/public/MODELS/gallery/tmpl_pro/tmpl/gallery.html
@@ -1,5 +1,5 @@
 ".($this->admin
-   ? $this->renderDisplay_fromObj($o, '', "{$o->modType}/gallery/tmpl_pro/ADMIN/tmpl/Agallery.html")
+   ? $this->Render_object($o, '', "{$o->modType}/gallery/tmpl_pro/ADMIN/tmpl/Agallery.html")
    : "orice"
 )."
 
@@ -8,15 +8,14 @@
 	<div id='featured'> 
 
 
-       ".$this->renderDisplay_Items_uniDimens(
-            $o->urlImages,
+       ".$this->Render_array($o->urlImages,'','',
             "<img src='~i' data-caption='#htmlCaption{~key}' /> ")."
     </div>
 
     ".(
       $o->captions
-         ? $this->renderDisplay_Items_uniDimens(
-                $o->urlImages,
+         ? $this->Render_array(
+                $o->urlImages,$o,'',
                 "
                    `.( isset(~o->captions[~key]) && ~o->captions[~key][`title_{~o->lang}`]
                        ? ` <span class='orbit-caption' id='htmlCaption{~key}'>
@@ -27,8 +26,7 @@
                        : ``
 
                     ).`
-                  ",
-                "", $o)
+                  ")
          : ""
 
     )."
