--- a/public/MODELS/gallery/tmpl_tribalFest/ADMIN/tmpl/Agallery.html
+++ b/public/MODELS/gallery/tmpl_tribalFest/ADMIN/tmpl/Agallery.html
@@ -9,7 +9,7 @@
                        headerName: 'manage Captions',
                        widthPop: '800',
                        heightPop: '450',
-                       procesSCRIPT: '".resURL."{$o->modType}/gallery/managePics.html"."'
+                       procesSCRIPT: '".RES_URL."{$o->modType}/gallery/managePics.html"."'
                     }); \">
                manage Captions
            </button>
