--- a/public/MODELS/masterBlog/tmpl/masterBlog.html
+++ b/public/MODELS/masterBlog/tmpl/masterBlog.html
@@ -1,7 +1,7 @@
 
 
 ".($this->idTree==$this->idNode && !isset($_GET['idRec']) && (!isset($_GET['Pn']) || $_GET['Pn']==1)
-   ? $this->renderDisplay_fromObj($this->{$o->current_modelBlog}->homeSET
+   ? $this->Render_object($this->{$o->current_modelBlog}->homeSET
                             ,'', "MODELS/blog/tmpl/blogRecords_home.html")
    : ""
 )."
@@ -19,6 +19,6 @@
 
 <div id='page' class='span9'>
   <div class='container-fluid'>
-    ".$this->ctrlDisplay_fromObj($this->{$o->current_modelBlog})."
+    ".$this->Render_Module($this->{$o->current_modelBlog})."
   </div>
 </div>
