--- a/public/MODELS/profile/tmpl_about/tmpl/about.html
+++ b/public/MODELS/profile/tmpl_about/tmpl/about.html
@@ -33,13 +33,13 @@
 </div>
 
 
-<div class='fullwidth mediumblue space'>
+<!--<div class='fullwidth mediumblue space'>
 	<div class='block overflow'>
     	<div class='centeredQuote darkblue'>
             Our project is a multimedia exploration of relevant stories in the Black Sea region.
         </div>
     </div>
-</div>
+</div>-->
 
 <div class='block space overflow'>
     ".$this->Render_itemsFromStr($o->profiles, '', "
