--- a/public/MODELS/profile/tmpl_about/tmpl/profile.html
+++ b/public/MODELS/profile/tmpl_about/tmpl/profile.html
@@ -13,7 +13,7 @@
         ".( count($o->recordsArchive) == 0
             ? "<p> There are no stories written </p>"
             : "<ul class='contributions space'>"
-              . $this->Render_itemsFromStr($o->recordsArchive, '', "
+              . $this->Render_itemsFromStr(array_slice($o->recordsArchive, 0, 10), '', "
                     <li>
                         <a href='{~ao->record_href}' target='_blank'>
                             {~ao->title}
@@ -22,13 +22,30 @@
 
                 ")
               . "</ul>"
+
+              .( count($o->recordsArchive) <= 10 ? '' :
+                 "<ul class='contributions space' id='moreArchives_text' style='display: none;'>"
+                  . $this->Render_itemsFromStr(array_slice($o->recordsArchive, 10), '', "
+                        <li>
+                            <a href='{~ao->record_href}' target='_blank'>
+                                {~ao->title}
+                            </a>
+                        </li>
+
+                    ")
+                  . "</ul>"
+                  ."<div style='width: 60px; '>
+                       <div class='showMore' id='moreArchives'>More</div>
+                   </div>"
+               )
+
         )."
 
 	    <div class='fullwidth'><div class='label'>Blog contributions</div></div>
         ".( count($o->recordsBlog) == 0
             ? "<p> There are no stories written </p>"
             : "<ul class='contributions space'>"
-              . $this->Render_itemsFromStr($o->recordsBlog, '', "
+              . $this->Render_itemsFromStr(array_slice($o->recordsBlog,0,10), '', "
                     <li>
                         <a href='{~ao->record_href}' target='_blank'>
                         {~ao->title}
@@ -36,6 +53,22 @@
                     </li>
               ")
               . "</ul>"
+
+              .( count($o->recordsBlog) <= 10 ? '' :
+                "<ul class='contributions space' id='moreBlogs_text' style='display: none;'>"
+                . $this->Render_itemsFromStr(array_slice($o->recordsBlog,10), '', "
+                      <li>
+                          <a href='{~ao->record_href}' target='_blank'>
+                          {~ao->title}
+                          </a>
+                      </li>
+                ")
+                . "</ul>"
+
+                ."<div style='width: 60px; '>
+                      <div class='showMore' id='moreBlogs'>More</div>
+                 </div>"
+              )
         )."
     </div>
 
