--- a/public/MODELS/profile/tmpl_about/tmpl/profile.html
+++ b/public/MODELS/profile/tmpl_about/tmpl/profile.html
@@ -13,7 +13,7 @@
         ".( count($o->recordsArchive) == 0
             ? "<p> There are no stories written </p>"
             : "<ul class='contributions space'>"
-              . $this->Render_itemsFromStr(array_slice($o->recordsArchive, 0, 10), '', "
+              . $this->Render_itemsFromStr(array_slice($o->recordsArchive, 0, 3), '', "
                     <li>
                         <a href='{~ao->record_href}' target='_blank'>
                             {~ao->title}
@@ -23,7 +23,7 @@
                 ")
               . "</ul>"
 
-              .( count($o->recordsArchive) <= 10 ? '' :
+              .( count($o->recordsArchive) <= 3 ? '' :
                  "<ul class='contributions space' id='moreArchives_text' style='display: none;'>"
                   . $this->Render_itemsFromStr(array_slice($o->recordsArchive, 10), '', "
                         <li>
@@ -45,7 +45,7 @@
         ".( count($o->recordsBlog) == 0
             ? "<p> There are no stories written </p>"
             : "<ul class='contributions space'>"
-              . $this->Render_itemsFromStr(array_slice($o->recordsBlog,0,10), '', "
+              . $this->Render_itemsFromStr(array_slice($o->recordsBlog,0, 3), '', "
                     <li>
                         <a href='{~ao->record_href}' target='_blank'>
                         {~ao->title}
@@ -56,7 +56,7 @@
 
               .( count($o->recordsBlog) <= 10 ? '' :
                 "<ul class='contributions space' id='moreBlogs_text' style='display: none;'>"
-                . $this->Render_itemsFromStr(array_slice($o->recordsBlog,10), '', "
+                . $this->Render_itemsFromStr(array_slice($o->recordsBlog, 3), '', "
                       <li>
                           <a href='{~ao->record_href}' target='_blank'>
                           {~ao->title}
@@ -74,7 +74,7 @@
 
     <div class='LeftColumnSmall space'>
 
-	    <div class='mainFeaturedImg space .photo-containter'>
+	    <div class='mainFeaturedImg-profilePhoto space .photo-containter'>
             ".($o->profile->photo
                    ? "<img class='EDpic photo' style='width:100%' src='{$o->profile->photo}'/>"
                    : "<img class='EDpic photo'  style='width:100%' src='RES/uploads/foto/default.jpg'/>"
