mici modificari la css template

--- a/public/MODELS/profile/tmpl_about/tmpl/about.html
+++ b/public/MODELS/profile/tmpl_about/tmpl/about.html
@@ -72,14 +72,14 @@
     ")."
 
     <div class='clearfix'></div>
-    <div class='SING margin-t20 sponsorsDesc'  id='sponsorsDesc_sponsors_en'>
+    <div class='SING sponsorsDesc'  id='sponsorsDesc_sponsors_en'>
         <a name='sponsors'></a>
         <div class='EDeditor textDesc desc'  data-iedit-cketoolbar='webmaster'>
             ".$this->Render_ModulefromRes($this->blogSite, 'sponsorsDescription')."
         </div>
     </div>
 
-    <div class='SING margin-t20 awardsDesc'  id='awardsDesc_awards_en'>
+    <div class='SING awardsDesc'  id='awardsDesc_awards_en'>
         <a name='awards'></a>
         <div class='EDeditor textDesc desc'  data-iedit-cketoolbar='webmaster'>
             ".$this->Render_ModulefromRes($this->blogSite, 'awardsDescription')."
