--- a/public/MODELS/single/tmpl/single.html
+++ b/public/MODELS/single/tmpl/single.html
@@ -1,5 +1,5 @@
 <div class='SING single' id='single_{$o->idNode}_{$o->LG}'>
-    <div class='EDeditor single'>
+    <div class='EDeditor desc'>
         ".$this->Render_ModulefromRes($o)."
     </div>
 </div>
