--- a/public/MODELS/single/tmpl/single.html
+++ b/public/MODELS/single/tmpl/single.html
@@ -1,4 +1,4 @@
-<div class='SING single' id='single_{$o->idNode}_{$o->lang}'>
+<div class='SING single' id='single_{$o->nodeName}_{$o->lang}'>
     <div class='EDeditor desc'>
         ".$this->Render_ModulefromRes($o)."
     </div>
